// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders RTL styling 1`] = `
<label
  className="c-txt__label is-rtl "
  data-garden-id="textfields.label"
  data-garden-version="version"
/>
`;

exports[`Label renders default styling 1`] = `
<label
  className="c-txt__label "
  data-garden-id="textfields.label"
  data-garden-version="version"
/>
`;

exports[`Label renders regular styling if provided 1`] = `
<label
  className="c-txt__label c-txt__label--regular "
  data-garden-id="textfields.label"
  data-garden-version="version"
/>
`;

exports[`Label renders small styling if provided 1`] = `
<label
  className="c-txt__label c-txt__label--sm "
  data-garden-id="textfields.label"
  data-garden-version="version"
/>
`;
